LPS-52192  removed "position:relative" in modals as this was causing the bug. To solve the original problem in LPS-51069, we can set the z-index in #wrapper

--- a/portal-web/docroot/html/themes/_styled/css/layout.css
+++ b/portal-web/docroot/html/themes/_styled/css/layout.css
@@ -12,6 +12,7 @@
 	padding-bottom: 0;
 	padding-top: 2em;
 	position: relative;
+	z-index: 1;
 
 	@include respond-to(desktop) {
 		padding-left: 5em;
